# Freds-Controller-Tester

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
icon/: README  rasterize.ps1
src/: CMakeLists.txt  CheckForUpdates.cpp  CheckForUpdates.hpp  Config.in.hpp  ControlInfo.hpp  DeviceInfo.cpp  DeviceInfo.hpp  DeviceTracker.hpp  DirectInputDeviceInfo.cpp  DirectInputDeviceInfo.hpp  DirectInputDeviceTracker.cpp  DirectInputDeviceTracker.hpp  GUI.cpp  GUI.hpp  XInputDeviceInfo.cpp  XInputDeviceInfo.hpp  XInputDeviceTracker.cpp  XInputDeviceTracker.hpp  main.cpp  manifest.xml  version.in.rc
